tests/typing/bad/testfile-comparison-2.c

union S { int a; };
int main() { int x; union S s; 1 != s; }
